opam-version: "2.0"
maintainer: "Jules Aguillon <juloo.dsi@gmail.com>"
authors: "Jules Aguillon <juloo.dsi@gmail.com>"
homepage: "https://github.com/Julow/current-ez"
bug-reports: "https://github.com/Julow/current-ez/issues"
dev-repo: "git+https://github.com/Julow/current-ez.git"
license: "MIT"
build: [ ["dune" "build" "-p" name "-j" jobs] ]
depends: [
  "dune"
  "current"
  "current_docker"
  "current_git"
  "current_web"
  "cmdliner"
  "fmt"
  "logs"
]
synopsis: "Easy CI"
